# ray-tracing

./: Cargo.toml
benches/: scene.rs
src/: aabb.rs  bvh.rs  camera.rs  hit.rs  hittable.rs  lib.rs  main.rs  material.rs  object.rs  perlin.rs  ray.rs  shape.rs  sphere.rs  texture.rs  vec.rs  vec3.rs
src/hittable/: hitrecord.rs
src/material/: dielectric.rs  lambertian.rs  metal.rs
src/object/: sphere.rs
src/shape/: moving_sphere.rs  sphere.rs
