[package]
name = "ray-tracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
rand = "0.6.5"
rayon = "1.5.1"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "scene"
harness = false
